tests/suite/snapshots/suite__case_54t7.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: MappingStart
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Scalar
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 4
    line: 0
    column: 4
- token: MappingValue
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: Separator
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Scalar
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 9
    line: 0
    column: 9
- token: CollectionEntry
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 10
    line: 0
    column: 10
- token: Separator
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 11
    line: 0
    column: 11
- token: Scalar
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 14
    line: 0
    column: 14
- token: MappingValue
  start:
    index: 14
    line: 0
    column: 14
  end:
    index: 15
    line: 0
    column: 15
- token: Separator
  start:
    index: 15
    line: 0
    column: 15
  end:
    index: 16
    line: 0
    column: 16
- token: Scalar
  start:
    index: 16
    line: 0
    column: 16
  end:
    index: 19
    line: 0
    column: 19
- token: MappingEnd
  start:
    index: 19
    line: 0
    column: 19
  end:
    index: 20
    line: 0
    column: 20
- token: Break
  start:
    index: 20
    line: 0
    column: 20
  end:
    index: 22
    line: 1
    column: 0

