tests/suite/snapshots/suite__case_55wf.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "invalid block node at \r\n\"\\.\"\r\n"
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 3

