tests/suite/snapshots/suite__case_58mp.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: MappingStart
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Scalar
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: MappingValue
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: Separator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Scalar
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 6
- token: MappingEnd
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 7
- token: Break
  start:
    line: 0
    column: 7
  end:
    line: 1
    column: 0

