tests/suite/snapshots/suite__case_5bvj.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 7
- token: MappingValue
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: Separator
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: Literal
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: Break
  start:
    line: 0
    column: 10
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: Scalar
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 6
- token: ScalarBreak
  start:
    line: 1
    column: 6
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: Scalar
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 6
- token: ScalarBreak
  start:
    line: 2
    column: 6
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: Scalar
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 6
- token: MappingValue
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 7
- token: Separator
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 8
- token: Folded
  start:
    line: 3
    column: 8
  end:
    line: 3
    column: 9
- token: Break
  start:
    line: 3
    column: 9
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 2
- token: Scalar
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 6
- token: ScalarSpace
  start:
    line: 4
    column: 6
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 6
- token: ScalarBreak
  start:
    line: 5
    column: 6
  end:
    line: 6
    column: 0

