tests/suite/snapshots/suite__case_5c5m.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceEntry
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Separator
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: MappingStart
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: Separator
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Scalar
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 7
    line: 0
    column: 7
- token: Separator
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 8
    line: 0
    column: 8
- token: MappingValue
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 9
    line: 0
    column: 9
- token: Separator
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 10
    line: 0
    column: 10
- token: Scalar
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 13
    line: 0
    column: 13
- token: Separator
  start:
    index: 13
    line: 0
    column: 13
  end:
    index: 14
    line: 0
    column: 14
- token: CollectionEntry
  start:
    index: 14
    line: 0
    column: 14
  end:
    index: 15
    line: 0
    column: 15
- token: Separator
  start:
    index: 15
    line: 0
    column: 15
  end:
    index: 16
    line: 0
    column: 16
- token: Scalar
  start:
    index: 16
    line: 0
    column: 16
  end:
    index: 21
    line: 0
    column: 21
- token: MappingValue
  start:
    index: 21
    line: 0
    column: 21
  end:
    index: 22
    line: 0
    column: 22
- token: Separator
  start:
    index: 22
    line: 0
    column: 22
  end:
    index: 23
    line: 0
    column: 23
- token: Scalar
  start:
    index: 23
    line: 0
    column: 23
  end:
    index: 27
    line: 0
    column: 27
- token: Separator
  start:
    index: 27
    line: 0
    column: 27
  end:
    index: 28
    line: 0
    column: 28
- token: CollectionEntry
  start:
    index: 28
    line: 0
    column: 28
  end:
    index: 29
    line: 0
    column: 29
- token: Separator
  start:
    index: 29
    line: 0
    column: 29
  end:
    index: 30
    line: 0
    column: 30
- token: MappingEnd
  start:
    index: 30
    line: 0
    column: 30
  end:
    index: 31
    line: 0
    column: 31
- token: Break
  start:
    index: 31
    line: 0
    column: 31
  end:
    index: 33
    line: 1
    column: 0
- token: Indent
  start:
    index: 33
    line: 1
    column: 0
  end:
    index: 33
    line: 1
    column: 0
- token: SequenceEntry
  start:
    index: 33
    line: 1
    column: 0
  end:
    index: 34
    line: 1
    column: 1
- token: Separator
  start:
    index: 34
    line: 1
    column: 1
  end:
    index: 35
    line: 1
    column: 2
- token: MappingStart
  start:
    index: 35
    line: 1
    column: 2
  end:
    index: 36
    line: 1
    column: 3
- token: Scalar
  start:
    index: 36
    line: 1
    column: 3
  end:
    index: 40
    line: 1
    column: 7
- token: MappingValue
  start:
    index: 40
    line: 1
    column: 7
  end:
    index: 41
    line: 1
    column: 8
- token: Separator
  start:
    index: 41
    line: 1
    column: 8
  end:
    index: 42
    line: 1
    column: 9
- token: Scalar
  start:
    index: 42
    line: 1
    column: 9
  end:
    index: 45
    line: 1
    column: 12
- token: CollectionEntry
  start:
    index: 45
    line: 1
    column: 12
  end:
    index: 46
    line: 1
    column: 13
- token: Scalar
  start:
    index: 46
    line: 1
    column: 13
  end:
    index: 51
    line: 1
    column: 18
- token: Separator
  start:
    index: 51
    line: 1
    column: 18
  end:
    index: 52
    line: 1
    column: 19
- token: MappingValue
  start:
    index: 52
    line: 1
    column: 19
  end:
    index: 53
    line: 1
    column: 20
- token: Separator
  start:
    index: 53
    line: 1
    column: 20
  end:
    index: 54
    line: 1
    column: 21
- token: Scalar
  start:
    index: 54
    line: 1
    column: 21
  end:
    index: 59
    line: 1
    column: 26
- token: MappingEnd
  start:
    index: 59
    line: 1
    column: 26
  end:
    index: 60
    line: 1
    column: 27
- token: Break
  start:
    index: 60
    line: 1
    column: 27
  end:
    index: 62
    line: 2
    column: 0

