tests/suite/snapshots/suite__case_5gbf.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 7
    line: 0
    column: 7
- token: MappingValue
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 8
    line: 0
    column: 8
- token: Break
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 10
    line: 1
    column: 0
- token: Indent
  start:
    index: 10
    line: 1
    column: 0
  end:
    index: 11
    line: 1
    column: 1
- token: Separator
  start:
    index: 11
    line: 1
    column: 1
  end:
    index: 12
    line: 1
    column: 2
- token: DoubleQuote
  start:
    index: 12
    line: 1
    column: 2
  end:
    index: 13
    line: 1
    column: 3
- token: DoubleQuoted
  start:
    index: 13
    line: 1
    column: 3
  end:
    index: 23
    line: 1
    column: 13
- token: Break
  start:
    index: 23
    line: 1
    column: 13
  end:
    index: 25
    line: 2
    column: 0
- token: Indent
  start:
    index: 25
    line: 2
    column: 0
  end:
    index: 26
    line: 2
    column: 1
- token: Separator
  start:
    index: 26
    line: 2
    column: 1
  end:
    index: 29
    line: 2
    column: 4
- token: ScalarBreak
  start:
    index: 29
    line: 2
    column: 4
  end:
    index: 31
    line: 3
    column: 0
- token: Indent
  start:
    index: 31
    line: 3
    column: 0
  end:
    index: 32
    line: 3
    column: 1
- token: Separator
  start:
    index: 32
    line: 3
    column: 1
  end:
    index: 33
    line: 3
    column: 2
- token: DoubleQuoted
  start:
    index: 33
    line: 3
    column: 2
  end:
    index: 47
    line: 3
    column: 16
- token: DoubleQuote
  start:
    index: 47
    line: 3
    column: 16
  end:
    index: 48
    line: 3
    column: 17
- token: Break
  start:
    index: 48
    line: 3
    column: 17
  end:
    index: 50
    line: 4
    column: 0
- token: Indent
  start:
    index: 50
    line: 4
    column: 0
  end:
    index: 50
    line: 4
    column: 0
- token: Scalar
  start:
    index: 50
    line: 4
    column: 0
  end:
    index: 58
    line: 4
    column: 8
- token: MappingValue
  start:
    index: 58
    line: 4
    column: 8
  end:
    index: 59
    line: 4
    column: 9
- token: Separator
  start:
    index: 59
    line: 4
    column: 9
  end:
    index: 60
    line: 4
    column: 10
- token: Literal
  start:
    index: 60
    line: 4
    column: 10
  end:
    index: 61
    line: 4
    column: 11
- token: Break
  start:
    index: 61
    line: 4
    column: 11
  end:
    index: 63
    line: 5
    column: 0
- token: Indent
  start:
    index: 63
    line: 5
    column: 0
  end:
    index: 65
    line: 5
    column: 2
- token: Scalar
  start:
    index: 65
    line: 5
    column: 2
  end:
    index: 84
    line: 5
    column: 21
- token: ScalarBreak
  start:
    index: 84
    line: 5
    column: 21
  end:
    index: 86
    line: 6
    column: 0
- token: Indent
  start:
    index: 86
    line: 6
    column: 0
  end:
    index: 87
    line: 6
    column: 1
- token: Break
  start:
    index: 87
    line: 6
    column: 1
  end:
    index: 89
    line: 7
    column: 0
- token: Indent
  start:
    index: 89
    line: 7
    column: 0
  end:
    index: 89
    line: 7
    column: 0
- token: Break
  start:
    index: 89
    line: 7
    column: 0
  end:
    index: 91
    line: 8
    column: 0

