tests/suite/snapshots/suite__case_5kje.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: SequenceStart
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: Separator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Scalar
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 7
- token: CollectionEntry
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: Separator
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: Scalar
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 12
- token: CollectionEntry
  start:
    line: 0
    column: 12
  end:
    line: 0
    column: 13
- token: Separator
  start:
    line: 0
    column: 13
  end:
    line: 0
    column: 14
- token: SequenceEnd
  start:
    line: 0
    column: 14
  end:
    line: 0
    column: 15
- token: Break
  start:
    line: 0
    column: 15
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: SequenceEntry
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: SequenceStart
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Scalar
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 8
- token: Separator
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 9
- token: CollectionEntry
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 10
- token: Scalar
  start:
    line: 1
    column: 10
  end:
    line: 1
    column: 14
- token: SequenceEnd
  start:
    line: 1
    column: 14
  end:
    line: 1
    column: 15
- token: Break
  start:
    line: 1
    column: 15
  end:
    line: 2
    column: 0

