tests/suite/snapshots/suite__case_5mud.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: MappingStart
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: DoubleQuote
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: DoubleQuoted
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 6
- token: DoubleQuote
  start:
    line: 1
    column: 6
  end:
    line: 1
    column: 7
- token: Break
  start:
    line: 1
    column: 7
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Separator
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: MappingValue
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Scalar
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 6
- token: Separator
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 7
- token: MappingEnd
  start:
    line: 2
    column: 7
  end:
    line: 2
    column: 8
- token: Break
  start:
    line: 2
    column: 8
  end:
    line: 3
    column: 0

